Optimize query by using RETURN